# design-patterns-python

./: .coveragerc  Makefile  pyproject.toml
creational/abstract_factory/: main.py
creational/abstract_factory/chairs/: chair_interface.py  modern_chair.py  victorian_chair.py
creational/abstract_factory/funitures/: funiture_factory_interface.py  modern_funiture_factory.py  victorian_funiture_factory.py
creational/abstract_factory/sofas/: modern_sofa.py  sofa_interface.py  victorian_sofa.py
creational/abstract_factory/tables/: modern_table.py  table_interface.py  victorian_table.py
creational/factory_method/: main.py
creational/factory_method/logistics/: air_logistic.py  logistic.py  sea_logistic.py
creational/factory_method/vehicles/: boat.py  plane.py  vehicle.py
tests/creational/abstract_factory/chairs/: test_modern_chair.py  test_victorian_chair.py
tests/creational/abstract_factory/funitures/: test_modern_funiture_factory.py  test_victorian_funiture_factory.py
tests/creational/abstract_factory/sofas/: test_modern_sofa.py  test_victorian_sofa.py
tests/creational/abstract_factory/tables/: test_modern_table.py  test_victorian_table.py
tests/creational/factory_method/: test_main.py
tests/creational/factory_method/logistics/: test_air_logistic.py  test_sea_logistic.py
tests/creational/factory_method/vehicles/: test_boat_vehicle.py  test_plane_vehicle.py
